--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "firebase": "^9.22.0",
     "next": "13.4.3",
     "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.23",
@@ -21,6 +22,7 @@
     "primereact": "^9.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
