--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "firebase": "^9.22.0",
+    "mongoose": "^7.2.0",
     "next": "13.4.3",
     "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.23",
